PSARC/2006/601 Battery Project 6527351 PSARC/2006/601 Battery Project: Add HAL ACPI support 6527350 PSARC/2006/601 Battery Project: create battery driver

--- a/usr/src/cmd/hal/hald/Makefile
+++ b/usr/src/cmd/hal/hald/Makefile
@@ -19,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -32,7 +32,7 @@ OBJS =		hald_marshal.o device.o device_info.o device_store.o hald.o \
 		hald_dbus.o hald_runner.o ids.o logger.o property.o util.o \
 		util_helper.o util_pm.o
 OBJS_SOL =	devinfo.o devinfo_ieee1394.o devinfo_misc.o devinfo_pci.o devinfo_storage.o \
-		devinfo_usb.o hotplug.o osspec.o sysevent.o
+		devinfo_usb.o hotplug.o osspec.o sysevent.o devinfo_acpi.o
 OBJS_ALL =	$(OBJS) $(OBJS_SOL:%=solaris/%)
 SRCS =		$(OBJS:%.o=%.c)
 
