--- a/usr/src/cmd/hal/probing/battery/Makefile
+++ b/usr/src/cmd/hal/probing/battery/Makefile
@@ -25,36 +25,45 @@
 # ident	"%Z%%M%	%I%	%E% SMI"
 #
 
-OBJS =		devinfo.o devinfo_ieee1394.o devinfo_misc.o devinfo_pci.o \
-		devinfo_storage.o devinfo_usb.o hotplug.o osspec.o sysevent.o \
-		devinfo_acpi.o
-
-SRCS =		$(OBJS:%.o=%.c)
-
-MANIFEST =	hal.xml
-SVCMETHOD =	svc-hal
+PROG =		hald-probe-battery
+OBJS =		probe-battery.o logger.o battery.o util_pm.o
+SRCS =		probe-battery.c
 
 include ../../../Makefile.cmd
 include ../../Makefile.hal
 
-ROOTMANIFESTDIR =	$(ROOTSVCSYSTEM)
-$(ROOTMANIFEST) :=	FILEMODE = 444
-$(ROOTLIBSVCMETHOD)/svc-hal:= FILEMODE = 555
+ROOTCMDDIR =	$(ROOTLIB_HAL)
 
-CPPFLAGS += $(HAL_DBUS_CPPFLAGS) $(HAL_GLIB_CPPFLAGS) $(HAL_CONFIG_CPPFLAGS)
-CPPFLAGS += -I/usr/sfw/include
+LDLIBS +=	-lc -ldbus-1 -lhal -lglib-2.0
+
+CPPFLAGS +=	$(HAL_DBUS_CPPFLAGS) $(HAL_CONFIG_CPPFLAGS) $(HAL_GLIB_CPPFLAGS)
+CPPFLAGS +=	-I$(ROOT)/usr/include/hal -I../../utils -I../../hald
 C99MODE =	$(C99_ENABLE)
 
 .KEEP_STATE:
 
-all: $(OBJS)
+all: $(PROG)
 
-install: all $(ROOTMANIFEST) $(ROOTSVCMETHOD)
+logger.o: ../../hald/logger.c
+	$(COMPILE.c) -o $@ ../../hald/logger.c
+	$(POST_PROCESS_O)
 
-check: $(CHKMANIFEST)
+battery.o: ../../utils/battery.c
+	$(COMPILE.c) -o $@ ../../utils/battery.c
+	$(POST_PROCESS_O)
+
+util_pm.o: ../../hald/util_pm.c
+	$(COMPILE.c) -o $@ ../../hald/util_pm.c
+	$(POST_PROCESS_O)
+
+$(PROG): $(OBJS)
+	$(LINK.c) -o $@ $(OBJS) $(LDLIBS)
+	$(POST_PROCESS)
+
+install: all $(ROOTCMD)
 
 clean:
-	$(RM) $(OBJS)
+	$(RM) $(OBJS) $(PROG)
 
 FRC:
 
