--- a/usr/src/uts/i86pc/io/battery/battery.conf
+++ b/usr/src/uts/i86pc/io/battery/battery.conf
@@ -22,40 +22,9 @@
 # Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
+
 # ident	"%Z%%M%	%I%	%E% SMI"
-#
 
-OBJS =		devinfo.o devinfo_ieee1394.o devinfo_misc.o devinfo_pci.o \
-		devinfo_storage.o devinfo_usb.o hotplug.o osspec.o sysevent.o \
-		devinfo_acpi.o
+name="battery" parent="pseudo" instance=0;
 
-SRCS =		$(OBJS:%.o=%.c)
-
-MANIFEST =	hal.xml
-SVCMETHOD =	svc-hal
-
-include ../../../Makefile.cmd
-include ../../Makefile.hal
-
-ROOTMANIFESTDIR =	$(ROOTSVCSYSTEM)
-$(ROOTMANIFEST) :=	FILEMODE = 444
-$(ROOTLIBSVCMETHOD)/svc-hal:= FILEMODE = 555
-
-CPPFLAGS += $(HAL_DBUS_CPPFLAGS) $(HAL_GLIB_CPPFLAGS) $(HAL_CONFIG_CPPFLAGS)
-CPPFLAGS += -I/usr/sfw/include
-C99MODE =	$(C99_ENABLE)
-
-.KEEP_STATE:
-
-all: $(OBJS)
-
-install: all $(ROOTMANIFEST) $(ROOTSVCMETHOD)
-
-check: $(CHKMANIFEST)
-
-clean:
-	$(RM) $(OBJS)
-
-FRC:
-
-include ../../../Makefile.targ
+ddi-forceattach=1;
