--- a/usr/src/cmd/ypcmd/net_files/Makefile
+++ b/usr/src/cmd/ypcmd/net_files/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -19,7 +18,7 @@
 #
 # CDDL HEADER END
 #
-# Copyright 2003 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #      Copyright (c) 1983, 1984, 1985, 1986, 1987, 1988, 1989 AT&T
@@ -452,7 +451,7 @@ audit.user.time:  $(RBACDIR)/audit_user
 		-e 's/\\$$/\\/;t l' -e } \
 		| (nawk 'BEGIN { FS=":"; OFS="\t" } /^[a-zA-Z0-9_]/ \
 		{print $$1, $$0 }' $(CHKPIPE)) \
-		| $(MAKEDBM) -s - $(YPDBDIR)/$(DOM)/audit_user; \
+		| $(MAKEDBM) - $(YPDBDIR)/$(DOM)/audit_user; \
 		touch audit.user.time; \
 		echo "updated audit_user"; \
 		if [ ! $(NOPUSH) ]; then \
