6520287 Serial console redirection ignores ttyX-mode with direct boot 6528202 bfu breaks the failsafe boot after snv_57 (dboot changes)

--- a/usr/src/uts/i86pc/Makefile.rules
+++ b/usr/src/uts/i86pc/Makefile.rules
@@ -152,7 +152,7 @@ DBOOT_LINTFLAGS_i86pc	= $(LINTFLAGS_i386_32) $(LINTTAGS_i386_32)
 DBOOT_LINTFLAGS = $(DBOOT_LINTFLAGS_$(PLATFORM)) $(C99LMODE) $(CPPFLAGS) \
 	$(DBOOT_DEFS)
 DBOOT_LOCAL_LINTFLAGS   = -c -dirout=$(DBOOT_LINTS_DIR) -I$(SRC)/common \
-	$(DBOOT_LINTFLAGS)
+	$(DBOOT_LINTFLAGS) $(DBOOT_LINTTAGS)
 
 $(DBOOT_OBJS_DIR)/%.o:		$(UTSBASE)/i86pc/boot/%.c
 	$(i386_CC) $(CERRWARN) -O $(DBOOT_DEFS) $(DBOOT_CC_INCL) -c -o $@ $<
