PSARC 2006/046 Wireless WPA Supplicant PSARC 2007/223 Wireless WPA Supplicant Addendum 6363273 Need access to WPA/TKIP functionality

--- a/usr/src/Makefile.lint
+++ b/usr/src/Makefile.lint
@@ -78,6 +78,7 @@ COMMON_SUBDIRS = \
 	cmd/cmd-inet/usr.lib/mipagent \
 	cmd/cmd-inet/usr.lib/pppoe \
 	cmd/cmd-inet/usr.lib/slpd \
+	cmd/cmd-inet/usr.lib/wpad \
 	cmd/cmd-inet/usr.lib/wanboot \
 	cmd/cmd-inet/usr.sadm \
 	cmd/cmd-inet/usr.sbin \
