--- a/usr/src/lib/libsecdb/help/auths/Makefile
+++ b/usr/src/lib/libsecdb/help/auths/Makefile
@@ -84,6 +84,7 @@ HTMLENTS = \
 	SmfValueHeader.html \
 	SmfValueNWAM.html \
 	SmfValueRouting.html \
+	SmfWpaStates.html \
 	NetworkHeader.html \
 	WifiConfig.html \
 	WifiWep.html \
