6539878 sparc brandz syscall wrappers don't collect trapstat data 6539890 sparc brandz syscall wrappers don't support sun4v 6540634 sparc sn1 brand fail on platforms where NCPU > 31

--- a/usr/src/Makefile.psm
+++ b/usr/src/Makefile.psm
@@ -66,6 +66,7 @@ ROOT_PSM_MMU_DIR_32	 = $(ROOT_PSM_MOD_DIR)/mmu
 ROOT_PSM_DACF_DIR_32	 = $(ROOT_PSM_MOD_DIR)/dacf
 ROOT_PSM_CRYPTO_DIR_32	 = $(ROOT_PSM_MOD_DIR)/crypto
 ROOT_PSM_PCBE_DIR_32	 = $(ROOT_PSM_MOD_DIR)/pcbe
+ROOT_PSM_BRAND_DIR_32	 = $(ROOT_PSM_MOD_DIR)/brand
 
 ROOT_PSM_KERN_DIR_64	 = $(ROOT_PSM_MOD_DIR)/$(SUBDIR64)
 ROOT_PSM_DRV_DIR_64	 = $(ROOT_PSM_MOD_DIR)/drv/$(SUBDIR64)
@@ -84,6 +85,7 @@ ROOT_PSM_MMU_DIR_64	 = $(ROOT_PSM_MOD_DIR)/mmu/$(SUBDIR64)
 ROOT_PSM_DACF_DIR_64	 = $(ROOT_PSM_MOD_DIR)/dacf/$(SUBDIR64)
 ROOT_PSM_CRYPTO_DIR_64	 = $(ROOT_PSM_MOD_DIR)/crypto/$(SUBDIR64)
 ROOT_PSM_PCBE_DIR_64	 = $(ROOT_PSM_MOD_DIR)/pcbe/$(SUBDIR64)
+ROOT_PSM_BRAND_DIR_64	 = $(ROOT_PSM_MOD_DIR)/brand/$(SUBDIR64)
 
 ROOT_PSM_KERN_DIR	 = $(ROOT_PSM_KERN_DIR_$(CLASS))
 ROOT_PSM_DRV_DIR	 = $(ROOT_PSM_DRV_DIR_$(CLASS))
@@ -102,6 +104,7 @@ ROOT_PSM_MMU_DIR	 = $(ROOT_PSM_MMU_DIR_$(CLASS))
 ROOT_PSM_DACF_DIR	 = $(ROOT_PSM_DACF_DIR_$(CLASS))
 ROOT_PSM_CRYPTO_DIR	 = $(ROOT_PSM_CRYPTO_DIR_$(CLASS))
 ROOT_PSM_PCBE_DIR	 = $(ROOT_PSM_PCBE_DIR_$(CLASS))
+ROOT_PSM_BRAND_DIR	 = $(ROOT_PSM_BRAND_DIR_$(CLASS))
 
 ROOT_PSM_MOD_DIRS_32	 = $(ROOT_PSM_DRV_DIR_32)
 ROOT_PSM_MOD_DIRS_32 	+= $(ROOT_PSM_EXEC_DIR_32) $(ROOT_PSM_FS_DIR_32)
@@ -114,6 +117,7 @@ ROOT_PSM_MOD_DIRS_32 	+= $(ROOT_PSM_MMU_DIR_32)
 ROOT_PSM_MOD_DIRS_32	+= $(ROOT_PSM_DACF_DIR_32)
 ROOT_PSM_MOD_DIRS_32	+= $(ROOT_PSM_CRYPTO_DIR_32)
 ROOT_PSM_MOD_DIRS_32	+= $(ROOT_PSM_PCBE_DIR_32)
+ROOT_PSM_MOD_DIRS_32	+= $(ROOT_PSM_BRAND_DIR_32)
 
 USR_PLAT_DIR		 = $(ROOT)/usr/platform
 
