--- a/usr/src/Makefile.psm.targ
+++ b/usr/src/Makefile.psm.targ
@@ -111,6 +111,9 @@ $(ROOT_PSM_CRYPTO_DIR)/%:	$(OBJS_DIR)/% $(ROOT_PSM_CRYPTO_DIR) FRC
 $(ROOT_PSM_PCBE_DIR)/%:		$(OBJS_DIR)/% $(ROOT_PSM_PCBE_DIR) FRC
 	$(INS.file)
 
+$(ROOT_PSM_BRAND_DIR)/%:	$(OBJS_DIR)/% $(ROOT_PSM_BRAND_DIR) FRC
+	$(INS.file)
+
 #
 #
 #
