--- a/usr/src/uts/intel/Makefile.intel.shared
+++ b/usr/src/uts/intel/Makefile.intel.shared
@@ -430,7 +430,7 @@ MISC_KMODS	+= md_sp
 #
 #	Brand modules
 #
-MISC_KMODS	+= sn1_brand lx_brand
+BRAND_KMODS	+= sn1_brand lx_brand
 DRV_KMODS	+= lx_systrace lx_ptm lx_audio
 STRMOD_KMODS	+= ldlinux
 
