--- a/usr/src/uts/sun4u/Makefile.sun4u.shared
+++ b/usr/src/uts/sun4u/Makefile.sun4u.shared
@@ -452,7 +452,7 @@ MISC_KMODS	+= zuluvm
 #
 #	Brand modules
 #
-MISC_KMODS	+= sn1_brand
+BRAND_KMODS	+= sn1_brand
 
 $(CLOSED_BUILD)CLOSED_MISC_KMODS	+= gptwo_cpu gptwocfg
 
