--- a/usr/src/uts/sun4v/Makefile.rules
+++ b/usr/src/uts/sun4v/Makefile.rules
@@ -62,6 +62,9 @@ $(OBJS_DIR)/%.o:		$(UTSBASE)/sun4v/pcbe/%.c
 	$(COMPILE.c) -o $@ $<
 	$(CTFCONVERT_O)
 
+$(OBJS_DIR)/%.o:		$(UTSBASE)/sun4/brand/sn1/%.s
+	$(COMPILE.s) -o $@ $<
+
 $(OBJS_DIR)/%.o:		$(UTSBASE)/sun4v/promif/%.c
 	$(COMPILE.c) -o $@ $<
 	$(CTFCONVERT_O)
@@ -186,6 +189,9 @@ $(LINTS_DIR)/%.ln:		$(UTSBASE)/sun4v/os/%.c
 
 $(LINTS_DIR)/%.ln:		$(UTSBASE)/sun4v/pcbe/%.c
 	@($(LHEAD) $(LINT.c) $< $(LTAIL))
+
+$(LINTS_DIR)/%.ln:		$(UTSBASE)/sun4/brand/sn1/%.s
+	@($(LHEAD) $(LINT.s) $< $(LTAIL))
 
 $(LINTS_DIR)/%.ln:		$(UTSBASE)/sun4v/promif/%.c
 	@($(LHEAD) $(LINT.c) $< $(LTAIL))
