--- a/usr/src/uts/intel/Makefile.intel.shared
+++ b/usr/src/uts/intel/Makefile.intel.shared
@@ -309,6 +309,7 @@ DRV_KMODS	+= vgatext
 DRV_KMODS	+= vni
 DRV_KMODS	+= wc
 DRV_KMODS	+= winlock
+DRV_KMODS	+= wpi
 DRV_KMODS	+= xge
 DRV_KMODS	+= zcons
 DRV_KMODS	+= chxge
