--- a/usr/src/pkgdefs/SUNWnfscr/Makefile
+++ b/usr/src/pkgdefs/SUNWnfscr/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -30,10 +29,20 @@ include ../Makefile.com
 
 DATAFILES += depend i.nfssecconf i.defnfs i.manifest r.manifest
 
+ACTION_SUNWrsgk=grep SUNWrsgk depend > /dev/null || \
+	( chmod 666 depend; \
+	/bin/echo "P SUNWrsgk\tkernel GSS-API services for ONC RPC" >> \
+	depend; chmod 444 depend );
+
 .KEEP_STATE:
 
-all: $(FILES) postinstall
+all: $(FILES) action postinstall
 
 install: all pkg
+
+# action is a pseudotarget denoting completed work on the depend file
+action: depend
+	$(ACTION_SUNWrsgk)
+	touch $@
 
 include ../Makefile.targ
