6393470 move driver bscbus to usr/src 6393471 move driver bscv to usr/src 6393472 move driver gptwo_cpu to usr/src 6393474 move driver gptwocfg to usr/src 6393478 move driver todstarcat to usr/src 6393479 move driver i2bsc to usr/src 6393481 move driver todm5819p_rmc to usr/src

--- a/usr/src/uts/intel/Makefile.files
+++ b/usr/src/uts/intel/Makefile.files
@@ -121,6 +121,8 @@ AMD64GART_OBJS += amd64_gart.o
 ATA_OBJS += $(GHD_OBJS) ata_blacklist.o ata_common.o ata_disk.o \
 	ata_dma.o atapi.o atapi_fsm.o ata_debug.o \
 	sil3xxx.o
+BSCBUS_OBJS += bscbus.o
+BSCV_OBJS += bscv.o
 CMDK_OBJS += cmdk.o
 CMLB_OBJS += cmlb.o
 DADK_OBJS += dadk.o
