--- a/usr/src/uts/sun4u/blade/io/bscbus.conf
+++ b/usr/src/uts/sun4u/blade/io/bscbus.conf
@@ -19,23 +19,13 @@
 # CDDL HEADER END
 #
 #
-#pragma ident	"%Z%%M%	%I%	%E% SMI"
-#
-# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2002 Sun Microsystems, Inc.
+# All rights reserved.
 # Use is subject to license terms.
 #
-#	This Makefile defines all file modules for the directory
-#	uts/sun4u/blade and its children. These are the source files which
-#	are blade "implementation architecture" dependent.
+#ident	"%Z%%M%	%I%	%E% SMI"
+#
+# Configuration file for "bscbus" driver
 #
 
-#
-# Object lists
-#
-BSCBUS_OBJS	= bscbus.o
-BSCV_OBJS	= bscv.o
-
-#
-# Miscellaneous
-#
-INC_PATH	+= -I$(UTSBASE)/sun4u/blade
+interrupt-priorities = 8, 8, 8, 8;
