--- a/usr/src/uts/intel/io/bscv.conf
+++ b/usr/src/uts/intel/io/bscv.conf
@@ -19,23 +19,20 @@
 # CDDL HEADER END
 #
 #
-#pragma ident	"%Z%%M%	%I%	%E% SMI"
-#
-# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2003 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-#	This Makefile defines all file modules for the directory
-#	uts/sun4u/blade and its children. These are the source files which
-#	are blade "implementation architecture" dependent.
+# ident	"%Z%%M%	%I%	%E% SMI"
+#
+# Configuration file for bscv driver
 #
 
-#
-# Object lists
-#
-BSCBUS_OBJS	= bscbus.o
-BSCV_OBJS	= bscv.o
+ddi-forceattach=1;
 
 #
-# Miscellaneous
+# The DEBUG version of the bscv driver supports a debug option value.
 #
-INC_PATH	+= -I$(UTSBASE)/sun4u/blade
+debug=0x0;
+
+parent="bscbus" name="bscv" instance=0;
+reg=0x0, 0x0, 0x4000, 0x201, 0x0, 0x1;
