--- a/usr/src/uts/sun4u/Makefile.files
+++ b/usr/src/uts/sun4u/Makefile.files
@@ -20,7 +20,7 @@
 #
 
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -133,6 +133,9 @@ PMUBUS_OBJS	+= pmubus.o
 PMUGPIO_OBJS	+= pmugpio.o
 PMC_OBJS	+= pmc.o
 TRAPSTAT_OBJS	+= trapstat.o
+I2BSC_OBJS	+= i2bsc.o
+GPTWOCFG_OBJS	+= gptwocfg.o
+GPTWO_CPU_OBJS	+= gptwo_cpu.o
 WRSM_OBJS	+= wci_common.o \
 			wrsm_barrier.o \
 			wrsm_cf.o \
@@ -182,8 +185,10 @@ TODMOSTEK_OBJS	+= todmostek.o
 TODDS1287_OBJS	+= todds1287.o
 TODDS1337_OBJS	+= todds1337.o
 TODSTARFIRE_OBJS += todstarfire.o
+TODSTARCAT_OBJS	+= todstarcat.o
 TODBLADE_OBJS	+= todblade.o
 TODM5819_OBJS	+= todm5819.o
+TODM5819P_RMC_OBJS	+= todm5819p_rmc.o
 TODBQ4802_OBJS	+= todbq4802.o
 TODSG_OBJS	+= todsg.o
 TODOPL_OBJS	= todopl.o
