--- a/usr/src/uts/sun4u/io/i2c/nexus/i2bsc.conf
+++ b/usr/src/uts/sun4u/io/i2c/nexus/i2bsc.conf
@@ -19,23 +19,13 @@
 # CDDL HEADER END
 #
 #
-#pragma ident	"%Z%%M%	%I%	%E% SMI"
-#
-# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2001-2002 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-#	This Makefile defines all file modules for the directory
-#	uts/sun4u/blade and its children. These are the source files which
-#	are blade "implementation architecture" dependent.
+#pragma ident	"%Z%%M%	%I%	%E% SMI"
+#
+# Configuration file for i2bsc driver
 #
 
-#
-# Object lists
-#
-BSCBUS_OBJS	= bscbus.o
-BSCV_OBJS	= bscv.o
-
-#
-# Miscellaneous
-#
-INC_PATH	+= -I$(UTSBASE)/sun4u/blade
+# 64-bit Debug bit-vector; requires DEBUG driver to be installed
+debug=0;
