--- a/usr/src/cmd/bsmrecord/Makefile
+++ b/usr/src/cmd/bsmrecord/Makefile
@@ -19,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -37,6 +37,9 @@ PROG		= bsmrecord
 
 AGETTEXT	= mkmsg
 STRIPTEXT	= filter_txt
+ATTRPROC	= audit_record_xml
+LIBBSMDIR	= ../../lib/libbsm
+ADTXMLFILE	= $(LIBBSMDIR)/common/adt.xml
 
 .KEEP_STATE:
 
@@ -61,8 +64,9 @@ clean:
 	$(SED) -e "s@TEXT_DOMAIN@\"$(TEXT_DOMAIN)\"@" $< > $@
 	$(CHMOD) 755 $@
 
-$(ATTR): $(STRIPTEXT) $(ATTR).txt
+$(ATTR): $(STRIPTEXT) $(ATTRPROC) $(ADTXMLFILE) $(ATTR).txt
 	./$(STRIPTEXT) < $(ATTR).txt > $(ATTR)
+	$(PERL) -I $(LIBBSMDIR) ./$(ATTRPROC) $(ADTXMLFILE) >> $(ATTR)
 
 $(ROOTUSRSBINPROG): $(PROG)
 	$(INS.file) $(PROG)
