PSARC 2007/202 FMA Generic Disk Monitoring Events 6521578 fmd dev scheme should leverage libtopo 6521579 libtopo dev enumerator should support TOPO_METH_PRESENT 6521582 dev scheme should respect FM_FMRI_DEV_ID 6521586 need generic disk status monitoring and diagnosis 6521591 fmd should provide a method for generating ENAs 6521600 sata libtopo module should generate dev:// ASRUs 6529061 fmd should provide an entry point for topology changes 6532208 fmd resource cache should be updated in response to EC_DEVFS sysevents 6537251 fmd dumped core while trying to print an error 6537305 ::topo_node is broken 6537762 fmd should not automatically mark faults as repaired on removal 6544740 fmd should reference count topo handles 6544741 dev scheme should support unusable method 6545681 libtopo should prevent invalid serial numbers in authority 6551464 topo_fmri_fru() is broken 6551466 hc_is_present() is broken

--- a/usr/src/cmd/fm/modules/common/Makefile
+++ b/usr/src/cmd/fm/modules/common/Makefile
@@ -18,7 +18,6 @@
 #
 # CDDL HEADER END
 #
-
 #
 # Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
@@ -26,14 +25,15 @@
 # ident	"%Z%%M%	%I%	%E% SMI"
 #
 
-SUBDIRS = cpumem-retire		\
-	eversholt		\
-	io-retire		\
-	ip-transport		\
-	snmp-trapgen		\
-	sp-monitor		\
-	syslog-msgs		\
-	zfs-diagnosis		\
+SUBDIRS = cpumem-retire \
+	disk-transport	\
+	eversholt 	\
+	io-retire	\
+	ip-transport	\
+	snmp-trapgen	\
+	sp-monitor	\
+	syslog-msgs	\
+	zfs-diagnosis	\
 	zfs-retire
 
 include ../../Makefile.subdirs
