--- a/usr/src/cmd/fm/modules/i86pc/sfx4500-disk/Makefile
+++ b/usr/src/cmd/fm/modules/i86pc/sfx4500-disk/Makefile
@@ -28,8 +28,8 @@ MODULE = sfx4500-disk
 CLASS = arch
 ARCH = i86pc
 SRCS = sfx4500-disk.c diskmon_conf.c topo_gather.c \
-	fault_mgr.c hotplug_mgr.c dm_platform.c \
-	schg_mgr.c fault_analyze.c scsi_util.c util.c
+	hotplug_mgr.c dm_platform.c \
+	schg_mgr.c util.c
 
 include ../../Makefile.plugin
 LINTFLAGS += -I. -I$(SRC)/lib/fm/topo/modules/i86pc/sata -L$(ROOT)/usr/lib/fm
