--- a/usr/src/cmd/fm/eversholt/files/i386/Makefile
+++ b/usr/src/cmd/fm/eversholt/files/i386/Makefile
@@ -19,13 +19,13 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 
 SUBDIRS=i86pc
-EFT_COMMON_FILES= pci.eft pciex.eft sca500.eft sca1000.eft
+EFT_COMMON_FILES= pci.eft pciex.eft sca500.eft sca1000.eft disk.eft
 
 include ../../../Makefile.subdirs
 
