--- a/usr/src/cmd/fm/schemes/dev/sparc/Makefile
+++ b/usr/src/cmd/fm/schemes/dev/sparc/Makefile
@@ -20,7 +20,7 @@
 #
 
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -28,5 +28,9 @@
 
 include ../Makefile.com
 include ../../Makefile.targ
+
+LDLIBS += -ltopo
+LDFLAGS += -L$(ROOT)/usr/lib/fm -R/usr/lib/fm
+LINTFLAGS += -L$(ROOT)/usr/lib/fm
 
 install: all $(ROOTPROG)
