6476729 SMF should not restart xntpd if xntpd has exited because the time difference is too large

--- a/usr/src/cmd/xntpd/xntpd/Makefile
+++ b/usr/src/cmd/xntpd/xntpd/Makefile
@@ -1,5 +1,5 @@
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -38,6 +38,7 @@ include ../../Makefile.targ
 LIBNTP=		../$(LIBNTP_A)
 LIBPARSE=	../$(LIBPARSE_A)
 LINTLIB=	../$(LLIBNTP_A)
+LIBS += 	-lscf
 LDLIBS +=		$(LIBNTP) $(LIBPARSE) $(LIBS)
 #
 SOURCE=	ntp_config.c ntp_control.c ntp_io.c ntp_leap.c \
