6522961 panic with nucleus text overflow

--- a/usr/src/uts/sparc/Makefile.sparc.shared
+++ b/usr/src/uts/sparc/Makefile.sparc.shared
@@ -140,6 +140,7 @@ CFLAGS		+= $(CCSTATICSYM)
 CFLAGS		+= $(IROPTFLAG)
 CFLAGS		+= $(CGLOBALSTATIC)
 CFLAGS		+= -xregs=no%float
+CFLAGS		+= -xstrconst
 
 ASFLAGS		+= $(XARCH)
 
