--- a/usr/src/uts/sun4v/Makefile.sun4v.shared
+++ b/usr/src/uts/sun4v/Makefile.sun4v.shared
@@ -179,6 +179,7 @@ CFLAGS		+= $(CCSTATICSYM)
 CFLAGS		+= $(IROPTFLAG)
 CFLAGS		+= $(CGLOBALSTATIC)
 CFLAGS		+= -xregs=no%float
+CFLAGS		+= -xstrconst
 CPPFLAGS	+= -DGLREG
 
 ASFLAGS		+= $(AS_XARCH) -DGLREG
