--- a/usr/src/uts/sun4u/Makefile.sun4u.shared
+++ b/usr/src/uts/sun4u/Makefile.sun4u.shared
@@ -215,6 +215,7 @@ CFLAGS		+= $(CCSTATICSYM)
 CFLAGS		+= $(IROPTFLAG)
 CFLAGS		+= $(CGLOBALSTATIC)
 CFLAGS		+= -xregs=no%float
+CFLAGS		+= -xstrconst
 
 ASFLAGS		+= $(AS_XARCH)
 
